tests/ui/imports/pub-reexport-empty.stderr
error: unused import: `a::*`
  --> $DIR/pub-reexport-empty.rs:5:9
   |
LL | pub use a::*;
   |         ^^^^
   |
note: the lint level is defined here
  --> $DIR/pub-reexport-empty.rs:1:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: unused import: `d::*`
  --> $DIR/pub-reexport-empty.rs:22:9
   |
LL | pub use d::*;
   |         ^^^^

error: aborting due to 2 previous errors

